Se acomodo mas cosas en ALF, se agrego un Indice a ese resumen

--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 1/1. Lenguajes, Gramática y Autómatas.md
@@ -1,8 +1,8 @@
-
-
 ## Lenguajes de Programación
 
 Los lenguajes de programación, al ser considerados ***formales o artificiales,*** son creados en primera instancia para cumplir con un objetivo específico y concreto, además del de servir para comunicarse con el hardware de manera efectiva.
+
+---
 
 >[!info] Definiciones Básicas
 > - Símbolos
@@ -57,11 +57,11 @@ Los ***símbolos*** son entidades atómicas e indivisibles, es decir, son lo má
 
  ![[lenguage-property3.png]]
 
-- **Diferencia** -> Sean dos lenguajes $L_1, L_2 \subset Σ^*$ -> $L_1 - L_2 = \{ x / x \in L_1 ∧ x  \notin L2 \}$
+- **Diferencia** -> Sean dos lenguajes $L_1, L_2 \subset Σ^*$ -> $L_1 - L_2 = \{ x / x \in L_1 \wedge x \notin L_2 \}$
 
 ![[lenguaje-property4.png]]
 
-- **Complementación** -> Se denomina complemento de $L$, al lenguaje que contiene todas las palabras sobre el alfabeto $Σ$ y que no pertenecen a $L$. $\overline{L} = { x / x \in Σ^* ∧ x  \notin L }$
+- **Complementación** -> Se denomina complemento de $L$, al lenguaje que contiene todas las palabras sobre el alfabeto $Σ$ y que no pertenecen a $L$. $\overline{L} = \{ x / x \in \Sigma^* ∧ x \notin L \}$
  
  ![[lenguaje-property5.png]]
 
