--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 1/2. Gramática Formal.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 1/2. Gramática Formal.md
@@ -1,6 +1,6 @@
 ![[ALF-relaciones.png]]
 
-### Relación Lenguaje-Autómata
+### Tipos de Autómatas
 
 >[!check] Definición de Autómata segun el area de la Informática.
 >Dispositivo o serie de disposiciones que proponen un enlazamiento automático y continuado de operaciones que permiten el procesamiento de una información de entrada, que al mismo tiempo generará una contraparte de salida.
@@ -106,7 +106,7 @@ Chomsky clasificó las gramáticas en cuatro grandes grupos, que se llaman, resp
 
 ##### Gramáticas del tipo 0 (sin restricciones).
 
-Son las gramáticas más generales. Sus reglas de producción no tienen ninguna restricción adicional. Los lenguajes representados por estas gramáticas se llaman lenguajes ***recursivamente enumerables***. En la parte izquierda debe existir al menos un símbolo no terminal. Respecto de las partes derechas de las producciones, no hay ningún tipo de restricción.
+Son las gramáticas más generales. Sus reglas de producción no tienen ninguna restricción adicional. Los lenguajes representados por estas gramáticas se llaman ***lenguajes recursivamente enumerables***. En la parte izquierda debe existir al menos un símbolo no terminal. Respecto de las partes derechas de las producciones, no hay ningún tipo de restricción.
 
 #### Gramáticas del tipo 1 (Dependientes o Sensibles al Contexto). 
 
@@ -117,9 +117,9 @@ $$P=\{ (S::= \lambda) ó(xAy ::= xvy)/ x, y \in \Sigma^*, A \in \Sigma_N, v \in 
 - La parte izquierda y derecha de las producciones tienen que tener una parte común.
 
 >[!info] Particularidad
-><span class="centerImg"> ![[1Tipo-gramaticaParticularidad.png]] </span>
+>$$a_1 \rightarrow a_2 \rightarrow \dotsc \rightarrow a_3, |a_i| \leq |a_{i + 1} | \dotsc \leq |a_n|$$
 >
-> Esto significa que cada palabra nueva formada con estas gramáticas va a ser mas larga o a lo sumo igual en longitud que su anterior.
+> Esto significa que cada palabra nueva formada con estas gramáticas va a ser más larga o a lo sumo igual en longitud que su anterior.
 
 
 #### Gramáticas del tipo 2 (independientes o libres del contexto).
@@ -198,9 +198,11 @@ Representación gráfica de las derivaciones de una gramática. Se utilizan en l
 
 >[!info] Propiedades de los Lenguajes
 >***Recursividad***: Es la definición de un concepto que utiliza a ese mismo concepto en la definición. Niveles de recursividad:
->- **Producción recursiva**: Si el símbolo no terminal aparece en los dos lados de la producción
+>- **Producción recursiva**: Si el símbolo no terminal aparece en los dos lados de la producción:
 >
->![[ALF-recursividad.png]]
+>Si $A::= Ay, (A \in \Sigma_N, y \in \Sigma^*)$ -> Regla recursiva por izquierda.
+>Si $A::= xA, (A \in \Sigma_N, x \in \Sigma^*)$ -> Regla recursiva por derecha.
+>$$\exists A \in \Sigma_N/ (A::= xAy) \in P, (x,y \in \Sigma^*)$$
 >
 >- **Gremática recursiva**: Si existe al menos una producción recursiva en su conjunto de producciones.
 >
@@ -208,3 +210,4 @@ Representación gráfica de las derivaciones de una gramática. Se utilizan en l
 >- **Sentencia**: si tiene más de una derivación o árbol de derivación.
 >- **Gramática**: si tiene al menos una sentencia ambigua.
 >- **Lenguaje**: si existe una gramática ambigua que lo genera. Si todas las gramáticas que lo generan son ambiguas, el lenguaje es ***inherentemente ambiguo***.
+
