--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/2. Autómatas Finitos.md
@@ -77,7 +77,8 @@ Como ya hemos nombrado anteriormente, estos autómatas en particular son reconoc
 
 A partir de la función de transición de un AFD compuesta de la siguiente manera -> ***𝛿(𝑞, 𝑎)/𝑎 ∈ ∑***. Se puede definir otra función denominada función de transición extendida, la cual se puede definir formalmente de forma recursiva:
 
-![[ALF-definicion-recursiva.png]]
+$$\hat{\delta}(q, x) = \{_{\hat{\delta}(\delta(q,a), y)\  \text{si x = ay}, a \  \in \  \Sigma, y \  \in \  \Sigma^*}^{q \  \text{si x = λ}}$$
+
 
 >[!important] Sobre la Función de Transición Extendida
 >La extensión de la función de transición se refiere a la posibilidad de extender esta función de transición a cadenas de símbolos del alfabeto de entrada, de tal forma que se pueda obtener el estado final en el que debería estar el autómata después de haber procesado completamente dicha cadena. Esta función extendida se llama ***función de transición extendida o función de transición de cadena*** (o sobre palabras).
@@ -89,7 +90,7 @@ Mediante esta dado un determinado autómata podemos demostrar que una palabra es
 - Un AFD rechaza una palabra si ***x <-> 𝛿(q, x) ∉ F***.
 - Un AFD reconoce o acepta una palabra si ***x <-> 𝛿(q, x) ∈ F*** , es decir, Se consumen todos los símbolos de entrada y al terminar la palabra, se llega a un estado final.
 
-#### Equivalencia de AFDs
+## Equivalencia de AFDs
 
 Dado dos autómatas $A_1$ y $A_2$, para comprobar si estos autómatas son equivalentes se utiliza el ***teorema de Moore***.
 
@@ -102,7 +103,7 @@ Entonces, dados dos autómatas $A=(Q, Σ, δ, q_0 , F)$ y $A´=(Q´, Σ´, δ´,
 3. Si aparece en el árbol un par (r, r´) de estados incompatibles, se interrumpe la construcción del mismo, concluyendo que los autómatas no son equivalentes. En caso contrario se continúan a partir del paso 2.
 4. Si no aparecen nuevos pares que no estén en el árbol, finaliza el proceso, concluyendo que los autómatas son equivalentes.
 
-#### Minimización de AFD
+## Minimización de AFD
 
 Los algoritmos que simulan o implementan autómatas finitos deterministas suelen requerir un espacio más o menos proporcional al número de estados del autómata, por lo que interesa que el número de dichos estados sea el menor posible. En un autómata puede haber dos tipos de estados *innecesarios*, que es posible eliminar o combinar para minimizar el número de estados. Por esta razón, existen dos operaciones de minimización diferentes:
 
@@ -124,7 +125,7 @@ Existen dos métodos de simplificación:
 		1. Inicialmente, se tienen las clases conformadas por los estados finales y los que no lo son.
 		2. Luego sea ***q*** un estado de una de las clases. Para cada uno de los otros estados, ***q´***, verificar si ***δ(q, σ)*** va a dar la misma clase de equivalencia que ***δ(q´, σ)***, para cada carácter σ. Esto quiere decir que para cada estado que se encuentra dentro de esa clase, todas las transiciones de estos van a llevar a la misma clase como resultado de la transición
 			- Si la respuesta es si, la clase no necesita dividirse.
-			- Si la respuesta es no, dividir la clase en dos subclases, la de los estados con transacciones “similares” a ***q*** y otra con los estados con transacciones “diferentes” a ***q***.
+			- Si la respuesta es no, se divide la clase en dos subclases, la de los estados con transacciones “similares” a ***q*** y otra con los estados con transacciones “diferentes” a ***q***.
 
 >[!note] Mas Ejemplos
 >Todos los ejemplos gráficos estan en las notas de las clases o en la filminas
@@ -148,17 +149,10 @@ Al igual que los autómatas finitos deterministas, los no deterministas se puede
 >- **Clausura transitiva de la relación lambda ($\Lambda^+$)**: dado un conjunto de estados { *p, q, r* } si ***(p, q)*** poseen una relación lambda, y además ***(q, r)*** a su vez poseen una relación lambda, entonces ***(p, r)*** también poseen una relación lambda.
 >- **Clausura transitiva y reflexiva de la relación ($\Lambda^*$)**: Posee todos los elementos de la clausura transitiva de la relación, agregando al grupo las transiciones lambda que posee cada estado consigo mismo, es decir, (p y p) o (q y q).
 
-#### Función de Transición sobre Palabras
+## Función de Transición sobre Palabras
 
 - Dada una función de transición no determinista, ***δ:QxΣ -> P(Q)***. La función de transición sobre palabras, se define así: ***𝛿(𝑞, 𝑥)*** como el conjunto de estados al que llega el autómata, tras procesar x, partiendo del estado *q*.
 - Dada una función de transición no determinista: ***δ: Q x (Σ U {ʎ}) -> P(Q)***. La función de transición sobre palabras, se define como el conjunto de estados al que llega el autómata desde un estado concreto, tras procesar una cadena de símbolos de entrada.
-
->[!info] Lenguajes Aceptados por un AFN
->Decimos que un AFN reconoce o acepta una palabra si:
->1. Se consumen todos los símbolos de entrada.
->2. Si al terminar la palabra, se llega al estado final.
->
->El lenguaje aceptado por un AFN, es el conjunto de palabras aceptadas por él.
 
 >[!note] Aspectos de diseño del AFNs
 >Al retirar algunas restricciones que tienen los AFD, su diseño para un lenguaje dado puede volverse más simple, a su vez existe si, una dificultad, que radica en lo difícil que es llegar a saber qué camino tomar.
@@ -172,7 +166,7 @@ Al igual que los autómatas finitos deterministas, los no deterministas se puede
 >
 ><span class="centerImg"> ![[ALF-concatenacion-lenguajes.png]] </span>
 
-#### Equivalencia AFN y AFD
+## Equivalencia AFN y AFD
 
 Informalmente, un AFN es una extensión de un AFD que permiten ciertas transiciones prohibidas para éstos:
 - A partir de un estado concreto, no es preciso que el autómata tenga prevista alguna transición a otro estado (o al mismo) en respuesta a todos los símbolos de entrada posibles.
