--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/3. Isomorfismo entre Gramática y Autómata.md
@@ -40,7 +40,7 @@ Dado un autómata se puede obtener la gramática que este representa, para eso s
 	- Si **δ(q, a) = p y p ∈ F** -> q::= a.
 	- Si **$q_0$ ∈ F** -> $q_0$ ::= λ.
 
-También podemos obtener el proceso inverso, dada una gramática podemos obtener el autómata que procesara ese lenguaje, Para eso dada una gramática lineal por derecha G = ($Σ_T$, $Σ_N$, S, P), se construye un autómata A = ($Σ_T$, $Σ_N$ U {F}, S, {F}); donde F ∉ $Σ_N$ es un nuevo símbolo no terminal, y δ se construye de la siguiente manera:
+También podemos obtener el proceso inverso, dada una gramática podemos obtener el autómata que procesara ese lenguaje, Para eso dada una gramática lineal por derecha $G = (Σ_T, Σ_N, S, P)$, se construye un autómata A = ($Σ_T$, $Σ_N$ U {F}, S, {F}); donde F ∉ $Σ_N$ es un nuevo símbolo no terminal, y δ se construye de la siguiente manera:
 
 - Si **A::=aB** -> δ(A, a) = B
 - Si **A::=a** -> δ(A, a) = F
