--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 2/4. Expresiones Regulares.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 2/4. Expresiones Regulares.md
@@ -1,3 +1,4 @@
+## Bases de las Expresiones Regulares
 
 >[!tldr] Operadores
 >- **Operador asterisco ( * )**: se aplica a la secuencia más corta de símbolos a la izquierda de una expresión regular.
@@ -28,7 +29,7 @@ Una Expresión Regular sobre un determinado alfabeto $\Sigma$  se obtiene de apl
 >- L(α•β) = L(α) • L(β)
 >- L(α + β) = L(α) U L(β)
 
-#### Propiedades
+### Propiedades
 
 Sean $L$, $M$ y $N$ tres lenguajes se van a cumplir siempre las siguientes propiedades:
 
