--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 3/2. Autómatas a Pila.md
@@ -1,3 +1,5 @@
+## Definición de un Autómata a Pila
+
 Los autómatas a pila se definen como una séptupla, $A = (Q,Σ,Γ,δ,q_0,A_0, F)$, en donde:
 
 - $Q$ es un conjunto finito no vacío de estados.
