--- a/3° Año/Autómatas y Lenguajes Formales/Unidad 5/1. Procesadores de Lenguaje.md
+++ b/3° Año/Autómatas y Lenguajes Formales/Unidad 5/1. Procesadores de Lenguaje.md
@@ -1,9 +1,7 @@
-
 >[!tldr] Conceptos Previos
 >Un lenguaje de programación es un conjunto de símbolos y un conjunto de reglas que establecen como se pueden combinar estos símbolos. Las cuales son usados para expresar algoritmos.
 >La ***sintaxis*** de un lenguaje de programación es una definición de lo que constituye un programa gramaticalmente válido en dicho lenguaje. La cual queda especificada por las *reglas léxicas* y las *reglas sintácticas*.
 >La ***semántica*** de un lenguaje de programación especifica el significado de las expresiones, sentencias y unidades del programa.
-
 
 # Tipos de Traductores
 
@@ -25,8 +23,8 @@ La parte de la síntesis construye el programa objeto deseado a partir de la rep
 ![[ALF-estructura-compilador2.png]]
 
 
-- **Analizador Léxico**: Se realiza un análisis lineal, de izquierda a derecha, de las cadenas de entrada que constituyen nuestro programa fuente y va agrupando a las cadenas en componentes léxicos (token/lexema), el analizador léxico comprueba si las palabras están escritas en el alfabeto del lenguaje y si dichas palabras pertenecen al lenguaje. Esta etapa se suele realizar por medio de un [[2. Autómatas Finitos | Autómata Finito]], ya que el lenguaje que describe los elementos básicos se pueden reducir a un lenguaje regular.
-- **Analizador Sintáctico**: Se realiza un análisis jerárquico, en donde se agrupan a los componentes léxicos en frases gramaticales, que el compilador utilizara para sintetizar una representación intermedia (árbol de análisis sintáctico), generalmente la estructura jerárquica de un programa se expresa utilizando reglas recursivas. Por esa precisa razón, el análisis sintáctico se realiza por medio de un [[2. Autómatas a Pila | Autómata a Pila]], debido a que la gramática que describe este tipo de frases suele ser independiente del contexto.
+- **Analizador Léxico**: Realiza un análisis lineal, de izquierda a derecha, de las cadenas de entrada que constituyen nuestro programa fuente y va agrupando a las cadenas en componentes léxicos (token/lexema), el analizador léxico comprueba si las palabras están escritas en el alfabeto del lenguaje y si dichas palabras pertenecen al lenguaje. Esta etapa se suele realizar por medio de un [[2. Autómatas Finitos | Autómata Finito]], ya que el lenguaje que describe los elementos básicos se pueden reducir a un lenguaje regular.
+- **Analizador Sintáctico**: Realiza un análisis jerárquico, en donde se agrupan a los componentes léxicos en frases gramaticales, que el compilador utilizara para sintetizar una representación interna (árbol de análisis sintáctico), generalmente la estructura jerárquica de un programa se expresa utilizando reglas recursivas. Por esa precisa razón, el análisis sintáctico se realiza por medio de un [[2. Autómatas a Pila | Autómata a Pila]], debido a que la gramática que describe este tipo de frases suele ser independiente del contexto.
 - **Analizador Semántico**: La semántica se ocupa del significado que tienen las instrucciones y construcciones de los programas escritos en un determinado lenguaje. Se busca errores semánticos, reúne información de tipos, identifica operadores y operandos. Una parte importante del análisis semántico es la verificación de tipos, en donde el compilador verifica que cada operador tenga operandos que coincidan, al mismo tiempo que guarda la información de los tipos en la tabla de símbolos, en caso de que no coincidan el compilador deberá informar del error. En esta etapa del proceso de compilación se tienen en cuenta cuestiones sensibles al contexto, por lo que esta etapa se realizara mediante un [[1. Máquina de Turing#^automatas-lineales-acotados | Autómata Lineal Acotado]] o en última instancia una [[1. Máquina de Turing#Máquina de Turing| Máquina de Turing]].
 	- La semántica de los lenguajes de programación se pueden definir de dos formas.
 		- La *semántica estática* que se ocupa de las condiciones que debe cumplir las construcciones de un programa para que su significado sea correcto.
@@ -57,14 +55,13 @@ No es más que una estructura de datos que contiene un registro o entrada por ca
 
 #### Detección e información de Errores
 
-En cada una de las fases se pueden encontrar errores, cada una de estas fases debe tratar de alguna forma con ese error y permitir que el proceso de compilación continúe. Por lo general, en la etapa del análisis léxico y sintáctico es donde más se concentran los errores detectados por los compiladores.
-Por esta razón se dice que la mayoría de los compiladores son dirigidos por sintaxis, ya que la mayoría de los errores son detectados en el análisis sintáctico y semántico.
+En cada una de las fases se pueden encontrar errores, cada una de estas fases debe tratar de alguna forma con ese error y permitir que el proceso de compilación continúe. Por lo general, en la etapa del análisis semántico y sintáctico es donde más se concentran los errores detectados por los compiladores. Por esta razón se dice que la mayoría de los compiladores son dirigidos por sintaxis.
 Típicamente, los compiladores realizan una pasada para realizar el análisis léxico y sintáctico, otra para el análisis semántico y la optimización, y una última pasada para generar el código objeto.
 
 ---
 
 ## Intérpretes
 
-Un ***intérprete*** hace que un programa fuente, escrito en un lenguaje de alto nivel, vaya sentencia por sentencia, traduciéndose y ejecutándose directamente por la computadora
+Un ***intérprete*** hace que un programa fuente, escrito en un lenguaje de alto nivel, vaya sentencia por sentencia, traduciéndose y ejecutándose directamente por la computadora.
 
 ![[ALF-Interpretes.png]]
