Se termino de agregar material de las filminas

--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -77,7 +77,7 @@ El modelo de proceso de investigación evolutivo reconoce que la investigación 
 El modelo de proceso evolutivo es el que mejor describe el proceso
 “real” de investigación. Si bien el modelo evolutivo permite que “las reglas de juego” cambien a lo largo del tiempo, ¡esto no implica que no haya reglas!
 
-## Método Científico
+#### Método Científico
 
 ***Método*** proviene del griego *methodos* (“camino” o “vía”) y hace referencia al medio que se utiliza para llegar a una cierta meta. Por otro lado, la palabra ***Científico***, es el adjetivo que menciona lo vinculado a la ciencia, es decir, un conjunto de técnicas y procedimientos que se emplean para producir conocimiento.
 El método científico, por lo tanto, se refiere a la serie de etapas que hay que recorrer para obtener un conocimiento válido desde el punto de vista científico, utilizando para esto instrumentos que resulten fiables. Lo que hace este método es minimizar la influencia de la subjetividad del científico en su trabajo. El método científico está basado en dos preceptos que determinan la utilidad del mismo como elemento de creación de conocimiento, la ***reproducibilidad*** y la ***refutabilidad***, estos elementos son los pilares fundamentales para el objetivo de la reducción de la subjetividad.
@@ -98,7 +98,7 @@ El método científico está compuesto de los siguientes elementos:
 
 Tanto caracterizaciones como experimentos involucran colecciones de datos, en la práctica se involucran iteraciones, recursiones, entrelazamientos y ordenamientos de los elementos.
 
-#### Tipos de Métodos Científicos
+###### Tipos de Métodos Científicos
 
 Caracterizar y clasificar las distintas opciones a la hora de generar conocimiento es una tarea sumamente compleja. No existe actualmente una clasificación única, ni siquiera hay consenso respecto de cuantos métodos existen. Sin embargo, hay ciertas clasificaciones que cuentan actualmente con cierto consenso dentro de la comunidad, de todas formas la clasificación es meramente una guía para entender los distintos métodos disponibles, puede haber cierto solapamiento entre las clases.
 
@@ -121,4 +121,25 @@ Caracterizar y clasificar las distintas opciones a la hora de generar conocimien
 - ***Método sintético***. Es un proceso mediante el cual se relacionan hechos aparentemente aislados y se formula una teoría que unifica los diversos elementos. Consiste en la reunión racional de varios elementos dispersos en una nueva totalidad. Este método se presenta más en el planteamiento de la hipótesis. El investigador sintetiza las superaciones en la imaginación para establecer una explicación tentativa que someterá a prueba.
 
 Debido a su fuerte relación con el mundo virtual y la abstracción matemática, en las **Ciencias de la Computación** el modelo científico clásico suele ser reemplazado por una variante más adecuada.
-El proceso suele comenzar con una idea, una noción de que algún proceso algorítmico puede ser modificado o creado, para proporcionar nuevas maneras de describir y transformar información, o brindar nuevas capacidades que apoyen de alguna manera esta anterior. Luego se analiza el estado del arte buscando técnicas similares que puedan servir de base o brindar un marco teórico a la idea general. Se establecen las condiciones del problema y se plantean las hipótesis de solución. Se realizan definiciones matemáticas y se establecen propiedades, al igual que se realiza la especificación de diseño. Se experimenta y testean las hipótesis. Este proceso suele involucrar iteración, sobre todo en research through design y prototipado. Finalmente, se establecen y publican los resultados formales.
+El proceso suele comenzar con una idea, una noción de que algún proceso algorítmico puede ser modificado o creado, para proporcionar nuevas maneras de describir y transformar información, o brindar nuevas capacidades que apoyen de alguna manera está anterior. Luego se analiza el estado del arte buscando técnicas similares que puedan servir de base o brindar un marco teórico a la idea general. Se establecen las condiciones del problema y se plantean las hipótesis de solución. Se realizan definiciones matemáticas y se establecen propiedades, al igual que se realiza la especificación de diseño. Se experimenta y testean las hipótesis. Este proceso suele involucrar iteración, sobre todo en research through design y prototipado. Finalmente, se establecen y publican los resultados formales.
+
+## La Hipótesis
+
+Una hipótesis es una afirmación tentativa sujeta a verificación. Pueden ser explicaciones tentativas de la relación entre dos o más variables. La principal función de esta misma es de servir de guía para el estudio, proporcionar explicaciones, y apoyar la prueba de la teoría.
+
+>[!tldr] Las Variables
+>Son propiedades que pueden fluctuar y cuya variación es susceptible de medirse u observarse. Ejemplos de variables son el género, la presión arterial, el atractivo físico, el aprendizaje de conceptos, la religión, la resistencia de un material, la masa.
+
+Ahora bien, ¿Es necesario que toda investigación debe plantear una hipótesis? No necesariamente, la formulación de una hipótesis va a depender del alcance del estudio:
+
+- **Estudios Exploratorios**: Los estudios exploratorios se realizan cuando el objetivo es examinar algo poco investigado o desconocido. Los estudios exploratorios en pocas ocasiones constituyen un fin en sí mismos. Generalmente, determinan tendencias, identifican áreas, ambientes, contextos y situaciones de estudio, relaciones potenciales entre variables; o establecen el “tono” de investigaciones posteriores más elaboradas y rigurosas. En este tipo de investigaciones no se formula ningún tipo de hipótesis. Algunos ejemplos de estos estudios son las investigaciones relacionadas con la máquina de Turing o el estudio de los sistemas biométricos.
+- **Estudios Descriptivos**: Con frecuencia, la meta del investigador consiste en describir fenómenos, situaciones, contextos y sucesos; esto es, detallar cómo son y se manifiestan. Con los estudios descriptivos se busca especificar las propiedades, las características y los perfiles de personas, grupos, comunidades, procesos, objetos o cualquier otro fenómeno que se someta a un análisis. En este tipo de investigaciones se suelen formular hipótesis cunado se proporcionan hechos o datos. Estas hipótesis se utilizan, a veces en estudios descriptivos, para intentar predecir un dato o valor en una o más variables que se van a medir u observar.
+- **Estudios Correlacionales**: Este tipo de estudios tiene como finalidad conocer la relación o grado de asociación que exista entre dos o más conceptos, categorías o variables en una muestra o contexto en particular. En este tipo de estudios se plantean hipótesis de correlación, en las cuales el orden en que coloquemos las variables no es importante, es decir, ninguna variable antecede a la otra; no hay relación de causalidad.
+- **Estudios Explicativos**: Su interés se centra en explicar por qué ocurre un fenómeno y en qué condiciones se manifiesta o por qué sé relacionan dos o más variables. En este tipo de investigaciones se formulan hipótesis causales, este tipo de hipótesis no solamente afirma la o las relaciones entre dos o más variables y la manera en que se manifiestan, sino que además propone un “*sentido de entendimiento*” de las relaciones. Por Ej.: El uso de servicios en la nube provoca una mejora en la productividad de los trabajos realizados en equipo.
+
+#### Formas de Clasificación de las Hipótesis
+
+- **Hipótesis de Investigación**: Este tipo de hipótesis son descriptivas de un valor o dato pronosticado, correlacionales, de diferencia de grupos, o incluso causales.
+- **Hipótesis Nulas**: Las hipótesis nulas son, en cierto modo, el reverso de las hipótesis de investigación. Por Ej.: partiendo de la siguiente hipótesis "*El uso de servicios en la nube provoca una mejora en la productividad de los trabajos realizados en equipo*.", la hipótesis nula de esta sería la siguiente: "*El uso de servicios en la nube ***no*** provoca una mejora en la productividad de los trabajos realizados en equipo*."
+- **Hipótesis Alternativas**: Son posibilidades alternas de las hipótesis de investigación y nula, ofrecen una descripción o explicación distinta de las que proporcionan éstas inicialmente, donde cada alternativa constituye una descripción distinta de las que proporcionan las hipótesis de investigación y nula. Por Ej.: partiendo de la hipótesis "*A mayor uso de clases virtuales, mayor es el rendimiento académico del alumno*". Una posible hipótesis alternativa podría ser: "A mayor uso de clases virtuales, mayor es el desinterés por participar en clase."
+
