--- a/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
+++ b/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
@@ -1,4 +1,4 @@
->[!quote] Que es la Comunicación según Wikipedia
+>[!quote] ¿Que es la Comunicación? -  Wikipedia
 >*La **comunicación** es el proceso mediante el cual se puede transmitir información de una entidad a otra, alterando el estado de conocimiento de la entidad receptora. La entidad emisora se considera única, aunque simultáneamente pueden existir diversas entidades emisores transmitiendo la misma información o mensaje. En general, suele haber más de una entidad receptora.*
 
 La forma en que se comunican los resultados de una investigación es mediante la elaboración de artículos (papers) y su publicación. Dichos papers pueden ser publicados en distintos lugares, como, por ejemplo, en workshops, conferencias o revistas científicas; pero también existen otros métodos que se pueden utilizar para publicar un trabajo de investigación, tal como los reportes técnicos, libros o incluso tesis.
@@ -47,7 +47,13 @@ En general, cuando hablamos de artículos o papers nos referimos a artículos ac
 Los artículos deben estar cuidadosamente redactados para expresar de un modo claro y sintético lo que se pretende comunicar, debe poseer dos niveles de explicaciones del contenido, una formal y otra basada en intuiciones. Además de incluir las citas y referencias bibliográficas indispensables para contextualizar, justificar y verificar los antecedentes e ideas o datos previos contenidos en el trabajo.
 Debe exponer toda la información necesaria para poder entender y reducir los resultados originales que se dan a conocer en él, es decir, debería ser autocontenido. No hay que olvidar que este tipo de textos no son obras de divulgación y están destinados a un público con cocimientos especializados. Por lo general, el lector que no conozca lo esencial de las referencias puede tener dificultades de comprensión.
 
-// poner el cuadro de la filmina en markdown
+| Caractrística      | Descripción                                                                                                                                    | Criterios de Calidad                                                                                                                                                                                                                        |
+|--------------------|------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
+| Trabajo científico | El artículo es el resultado de una investigación en el cual se difunden los hallazgos.                                                         | Deberá ser el resultado de una investigación con rigor científico. Es decir, deberá usar métodos, estándares y procedimientos que se hayan demostrado científicamente válidos.                                                                |
+| Originalidad       | El trabajo debe aportar algo nuevo al campo del conocimiento correspondiente.                                                                  | Debe ser un trabajo original del autor o autores.                                                                                                                                                                                           |
+| Arbitrado          | Se refiere a que el artículo ha sido evaluado por un comité de especialistas, el cual ha aprobado que el artículo se incluya en la publicación. | En las revistas arbitradas. Los árbitros pueden proponer a los autores correcciones y mejoras o aplicación y justificación de algún aspecto poco claro antes de su aceptación definitiva.                                                   |
+| Estructura         | Es la forma en la que se organiza el artículo.                                                                                                 | Deberá seguir la estructura impuesta por el organismo donde se publique el artículo, esto incluye: la forma de hacer referencias, los apartados y la extensión de cada apartado para cada una de las explicaciones de los siguientes temas. |
+| Temática           | Se refiere al contenido que se trata en el artículo.                                                                                           | Atractivo para el lector, de actualidad y dentro del campo de la revista que lo publica.                                                                                                                                                    |
 
 ##### Estructura de un Paper
 
