Se agregaron los horarios del segundo cuatri en una nota idependiente}

--- a/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
+++ b/3° Año/Metodología de la Investigación/2. Modelos Científicos.md
@@ -123,6 +123,8 @@ Caracterizar y clasificar las distintas opciones a la hora de generar conocimien
 Debido a su fuerte relación con el mundo virtual y la abstracción matemática, en las **Ciencias de la Computación** el modelo científico clásico suele ser reemplazado por una variante más adecuada.
 El proceso suele comenzar con una idea, una noción de que algún proceso algorítmico puede ser modificado o creado, para proporcionar nuevas maneras de describir y transformar información, o brindar nuevas capacidades que apoyen de alguna manera está anterior. Luego se analiza el estado del arte buscando técnicas similares que puedan servir de base o brindar un marco teórico a la idea general. Se establecen las condiciones del problema y se plantean las hipótesis de solución. Se realizan definiciones matemáticas y se establecen propiedades, al igual que se realiza la especificación de diseño. Se experimenta y testean las hipótesis. Este proceso suele involucrar iteración, sobre todo en research through design y prototipado. Finalmente, se establecen y publican los resultados formales.
 
+![[MI-modelo-alternativo.png]]
+
 ## La Hipótesis
 
 Una hipótesis es una afirmación tentativa sujeta a verificación. Pueden ser explicaciones tentativas de la relación entre dos o más variables. La principal función de esta misma es de servir de guía para el estudio, proporcionar explicaciones, y apoyar la prueba de la teoría.
