Correcciones de toda la unidad 1 de Met. investigación

--- a/3° Año/Metodología de la Investigación/1. Introducción.md
+++ b/3° Año/Metodología de la Investigación/1. Introducción.md
@@ -1,25 +1,14 @@
 ### ¿Qué es la Investigación?
 
->[!tldr] Definiciones
->- Investigar.
->	1. tr. Indagar para descubrir algo. Investigar un hecho.
->	2. tr. Indagar para aclarar la conducta de ciertas personas sospechosas de actuar ilegalmente.
->	3. intr. Realizar actividades intelectuales y experimentales de modo sistemático con el propósito de aumentar los conocimientos sobre una determinada materia.
->- Investigación.
->	1. f. Acción y efecto de investigar.
->	2. f. **investigación** que tiene por fin ampliar el conocimiento científico, sin perseguir, en principio, ninguna aplicación práctica.
-
-La ***investigación*** es una actividad orientada a la obtención de nuevos conocimientos y su aplicación para la solución a problemas o interrogantes de carácter científico.
-***Investigación científica*** es el nombre general que recibe, el largo y complejo proceso en el cual los avances científicos son el resultado de la aplicación del método científico para resolver problemas o tratar de explicar determinadas observaciones.
 En sí la investigación es el proceso de coleccionar, analizar e interpretar información para responder preguntas y/o resolver problemas, que al mismo tiempo generan conocimiento. Este proceso de investigación debe tener ciertas características, entre ellas, debe ser un proceso: controlado, sistemático, válido y demostrable, empírico y verificable, critico y revisable.
-
+***Investigación científica*** es el nombre general que recibe, el largo y complejo proceso en el cual los avances científicos son el resultado de la aplicación del **método científico** para resolver problemas o tratar de explicar determinadas observaciones.
 ### ¿Qué es la Investigación en la Ciencia de la Computación?
 
 Las ***Ciencias de la Computación*** es tanto una disciplina académica como una disciplina científica. La cual cuenta con un dominio u objeto de estudio y  una serie de métodos para estudiar dicho dominio.
 La definición de Ciencia de la Computación incluye “estudio sistemático”. A través de la investigación.
 
 >[!quote] Cita de Wikipedia
->Las ciencias de la computación o ciencias de la informática son las ciencias formales que abarcan las bases teóricas de la información y la computación, así como su aplicación en sistemas computacionales. El cuerpo de conocimiento de las ciencias de la computación es frecuentemente descrito como el estudio sistemático de los procesos algorítmicos que describen y transforman información: su teoría, análisis, diseño, eficiencia, implementación, algoritmos sistematizados y aplicación. En términos más específicos se trata del estudio sistemático de la factibilidad, estructura, expresión y mecanización de procedimientos metódicos (o algoritmos) que subyacen en la adquisición, representación, procesamiento, almacenamiento, comunicación y acceso a la información.
+>Las ciencias de la computación o ciencias de la informática son las ciencias formales que abarcan las bases teóricas de la información y la computación, así como su aplicación en sistemas computacionales. El cuerpo de conocimiento de las ciencias de la computación es frecuentemente descrito como el estudio sistemático de los procesos algorítmicos que describen y transforman información: su teoría, análisis, diseño, eficiencia, implementación, algoritmos sistematizados y aplicación. En términos más específicos se trata del estudio sistemático de la factibilidad, estructura, expresión y mecanización de procedimientos metódicos o algoritmos que subyacen en la adquisición, representación, procesamiento, almacenamiento, comunicación y acceso a la información.
 
 ### Diferencia entre Científico e Ingeniero
 
@@ -46,33 +35,33 @@ Mientras que un ingeniero ve un problema práctico y quiere saber “cómo” re
 - La ***Sabiduría*** se refiere al entendimiento profundo de un tema sumado a la capacidad de hacer buen uso del conocimiento.  Es el juicio sano basado en conocimiento y entendimiento; la aptitud de valerse con éxito del conocimiento y el entendimiento para resolver problemas, evitar o impedir peligros, alcanzar ciertas metas o aconsejar a otros a hacer lo mismo.
 
 >[!tldr] Diferencia entre Sabiduría y Conocimiento
->El conocimiento una vez desarrollado es general a todos aquellos que han entrado en contacto con el mismo. En cambio, en la sabiduría hay un carácter de individualidad (ya sea de una persona o una sociedad), ya que esa individualidad es quien se encarga de aplicar adecuadamente o no el conocimiento.
+>El conocimiento una vez desarrollado es general a todos aquellos que han entrado en contacto con el mismo. En cambio, en la sabiduría hay un carácter de individualidad ya sea de una persona o una sociedad, ya que esa individualidad es quien se encarga de aplicar adecuadamente o no el conocimiento.
 
 #### Rol de las Ciencias en la Jerarquía
 
 El objetivo de la investigación científica es el desarrollo de nuevo conocimiento.
-- Básico: sin una aplicación puntual definida a priori. Por Ej.: Teoría de Juegos de John Nash
-- Aplicado: la resolución puntual de un problema a través de la aplicación de conocimiento básico. Por Ej.: Aplicación de Teoría de Juegos en resolución de conflictos políticos en Medio Oriente.
+- **Básico**: Sin una aplicación puntual definida a priori, en la investigación básica nosotros nos enfocamos en generar nuevos conocimientos, pero nosotros no lo hacemos con el fin de aplicar esos conocimientos a un campo específico. Por Ej.: Teoría de Juegos de John Nash
+- **Aplicado**: La resolución puntual de un problema a través de la aplicación de conocimiento básico, en la investigación aplicada, los investigadores toman distintas teorías, teoremas o lemas y lo aplican a situaciones cualquiera con el fin de ver si estas resultan útiles para la resolución de ese problema. Por Ej.: Aplicación de Teoría de Juegos en resolución de conflictos políticos en Medio Oriente.
 
-El conocimiento científico generado a través de una investigación (método científico) se organiza usualmente en teorías. Estas teorías son una serie de modelos o “frameworks” lógicamente auto-consistente que describe el comportamiento de cierto fenómeno natural o social, ya sea que se origine de hechos observables o esté sustentado en ellos.
+El conocimiento científico generado a través de una investigación, empleando el método científico, se organiza usualmente en teorías. Estas teorías son una serie de modelos o *frameworks* lógicamente auto-consistente que describe el comportamiento de cierto fenómeno natural o social, ya sea que se origine de hechos observables o esté sustentado en ellos.
 Las teorías científicas establecidas que forman parte del conocimiento científico han soportado rigurosos testeos para llegar a tal estatus. Por lo general, estas teorías deben cumplir una serie de requisitos para ser consideradas una "buena teoría", estos requisitos son:
 
-- **CONSISTENCIA**: Es consistente con la teoría preexistente al punto de que la teoría preexistente fue verificada experimentalmente, aunque pudiendo demostrar que la teoría preexistente era “equivocada” en un sentido exacto (ej. Teoría de Newton para los cuerpos celestes).
-- **SUSTENTACIÓN**: Es sustentada por muchas evidencias en lugar de un único punto fundacional, lo que asegura que probablemente sea una buena aproximación, aunque no sea totalmente correcta.
-- **VERIFICABILIDAD**: Realiza predicciones verificables (¡que podrían ser usadas algún día incluso para refutarla!)
-- **TESTEADA**: Ha pasado por muchos tests del mundo real que podrían haber demostrado que era falsa.
-- **SIMPLICIDAD**: Es la mejor explicación conocida en el sentido de la Navaja de Occam, a partir de una variedad infinita de explicaciones alternativas para los mismos datos.
+- **Consistencia**: Es consistente con las teorías preexistentes al punto de que la teoría preexistente fue verificada experimentalmente, aunque pudiendo demostrar que la teoría preexistente era “equivocada” en un sentido exacto (ej. Teoría de Newton para los cuerpos celestes).
+- **Sustentación**: Es sustentada por muchas evidencias en lugar de un único punto fundacional, lo que asegura que probablemente sea una buena aproximación, aunque no sea totalmente correcta.
+- **Verificabilidad**: Realiza predicciones verificables, que podrían ser usadas algún día incluso para refutarla.
+- **Testeada**: Ha pasado por muchos tests del mundo real que podrían haber demostrado que era falsa.
+- **Simplicidad**: Es la mejor explicación conocida en el sentido de la Navaja de Occam, es decir, siempre optar por la teoría o hipótesis más corta.
 
 >[!tldr] Diferencias entre Hechos y Teorías
 >Un hecho es una verdad, una afirmación conforme la realidad o una serie de datos sustentados por un experimento científico. Mientras que una teoría es formulada, desarrollada y evaluada según el método científico, esto quiere decir que se pueden crear teorías siguiendo el procedimiento científico y al mismo tiempo ser falsas.
 
 #### Investigación: Hipótesis
 
-Investigación es un proceso activo., donde las hipótesis ayudan a que las actividades tengan un norte al que apuntar. Las predicciones de estas hipótesis son testeadas por experimentos y resultan en el desarrollo de otras tecnologías. Es posible que en una investigación se deban testear y refutar varias hipótesis antes de resolver el problema.
+Investigación es un proceso activo, donde las hipótesis ayudan a que las actividades tengan un norte al que apuntar. Las predicciones de estas hipótesis son testeadas por experimentos y resultan en el desarrollo de otras tecnologías. Es posible que en una investigación se deban testear y refutar varias hipótesis antes de resolver el problema.
 Cuando se elige una hipótesis a testear se debe considerar:
 
-- **Testeabilidad**: que se le puedan realizar testeos
-- **Parsimonia**: de acuerdo a la Navaja de Occam
+- **Testeabilidad**: que se le puedan realizar múltiples testeos
+- **Parsimonia**: de acuerdo a la Navaja de Occam, es decir, si poseo o manejo más de una hipótesis y estas son similares, me quedaré siempre con la que es más corta y sencilla.
 - **Alcance**: la aparente aplicación de la hipótesis a múltiples casos de fenómenos actuales.
 - **Fecundidad**: la expectativa de que la hipótesis pueda explicar fenómenos en el futuro.
 - **Conservatismo**: el grado de conformidad con el conocimiento reconocido actualmente.
